feat: edit theme and post first article

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = "https://Clotildelevou.github.io/mon-blog/"
 languageCode = "en-us"
 title = "Clou's Blog"
-theme = "beautifulhugo"
+theme = "diary"
 
 
 [params]
@@ -10,15 +10,6 @@ theme = "beautifulhugo"
   logo = "img/avatar.png"
   favicon = "img/favicon.ico"
   rss = true
-
-[author]
-  name = "Clotilde Levesque"
-  github = "Clotildelevou"
-
-[markup]
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true
 
 # Main menu
 [[menu.main]]
