--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -171,9 +171,16 @@ jobs:
           npm install -g pa11y
           pa11y http://localhost:1313 || echo "Accessibility issues detected"
 
-      - name: Check internal links with lychee
-        run: |
-          echo "Checking internal links with lychee"
-          curl -LsSf https://github.com/lycheeverse/lychee/releases/latest/download/lychee-linux-x86_64 -o lychee
-          chmod +x lychee
-          ./lychee --base ./public ./public || echo "Link check warnings found"
+      - name: Link Checker
+        id: lychee
+        uses: lycheeverse/lychee-action@v2
+        with:
+          fail: false
+
+      - name: Create Issue From File
+        if: steps.lychee.outputs.exit_code != 0
+        uses: peter-evans/create-issue-from-file@v5
+        with:
+          title: Link Checker Report
+          content-filepath: ./lychee/out.md
+          labels: report, automated issue
